--- a/pathtracing_test.html
+++ b/pathtracing_test.html
@@ -49,6 +49,8 @@ void main(void) {
 </script>
 
 <script id="float_fragment_shader" type="x-shader/x-fragment">
+#extension GL_EXT_shader_texture_lod : enable
+
 precision highp float;
 
 // uniforms
@@ -56,6 +58,9 @@ uniform float time;
 uniform int frame;
 uniform sampler2D buffer;
 uniform vec2 resolution;
+
+// cubeMap
+uniform samplerCube cubeMap;
 
 // camera
 uniform vec3 cameraPosition;
@@ -75,7 +80,7 @@ const float PI = 3.14159265359;
 const vec3 backgroundColor = vec3( 1.0 );
 
 // global
-//vec4 state;
+vec4 state;
 
 struct Ray {
 	vec3 origin;
@@ -225,7 +230,7 @@ void intersectSphere( inout Intersection intersection, Ray ray, Sphere sphere ){
 void intersectScene( inout Intersection intersection, inout Ray ray ) {
 	Plane plane;
 	plane.material.type = MATERIAL_TYPE_DIFFUSE;
-	plane.material.color = vec3( 0.5 );
+	plane.material.color = vec3( 0.6 );
 	plane.position = vec3( 0.0, 0.0, 0.0 );
 	plane.normal = vec3( 0.0, 1.0, 0.0 );
 	intersectPlane( intersection, ray, plane );
@@ -253,13 +258,13 @@ void intersectScene( inout Intersection intersection, inout Ray ray ) {
 void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce, float sa ) {
 	intersection.hit = false;
 	intersection.distance = INF;
-	intersection.material.color = backgroundColor;
-
 	intersectScene( intersection, ray );
 
 	if ( intersection.hit ) {
 		ray.origin = intersection.position + OFFSET * intersection.normal;
 		ray.direction = cosineDirection(76.2 + 73.1*float(bounce) + sa + 17.7*float(frame), intersection.normal);
+	} else {
+		intersection.material.color = textureCubeLodEXT( cubeMap, ray.direction, 0.0 ).rgb;//backgroundColor;
 	}
 }
 
@@ -289,7 +294,7 @@ void main( void ) {
 	// bounce
 	Intersection intersection;
 	vec3 color = vec3( 1.0 );
-	for ( int i = 0; i < 3; i++ ) {
+	for ( int i = 0; i < 7; i++ ) {
 		calcRadiance( intersection, ray, i, sa );
 		color *= intersection.material.color;
 		if ( !intersection.hit ) break;
@@ -325,7 +330,7 @@ void main(void) {
 			var container, stats;
 			var camera, renderer;
 			var orbitControls, prevOrbitControlsState = -1, prevCameraMatrixWorld;
-			var renderQuad;
+			var renderQuad, textureCube;
 			var floatQuad, initTexture, readBuffer, writeBuffer;
 			var frame = 0;
 			var clock = new THREE.Clock();
@@ -410,6 +415,7 @@ void main(void) {
 						time: { type: 'f', value: 0.0 },
 						frame: { type: 'i', value: frame },
 						buffer: { type: 't', value: readBuffer.texture },
+						cubeMap: { type: 'tc', value: textureCube },
 
 						cameraWorldMatrix: { type: 'm4', value: camera.matrixWorld },
 						cameraProjectionMatrixInverse: { type: 'm4', value: new THREE.Matrix4().getInverse( camera.projectionMatrix ) },
@@ -433,6 +439,22 @@ void main(void) {
 				} );
 			}
 
+			function initTextureCube() {
+				var r = "textures/cube/Bridge2/";
+				var urls = [ r + "posx.jpg", r + "negx.jpg",
+					r + "posy.jpg", r + "negy.jpg",
+					r + "posz.jpg", r + "negz.jpg" ];
+
+				var r = "textures/cube/pisa/";
+				var urls = [ r + "px.png", r + "nx.png",
+					r + "py.png", r + "ny.png",
+					r + "pz.png", r + "nz.png" ];
+
+				textureCube = new THREE.CubeTextureLoader().load( urls );
+				textureCube.format = THREE.RGBFormat;
+				textureCube.mapping = THREE.CubeReflectionMapping;
+			}
+
 			function init() {
 
 				container = document.createElement( 'div' );
@@ -449,9 +471,14 @@ void main(void) {
 				canvas = renderer.domElement;
 				container.appendChild( canvas );
 
-				// check OES_texture_float
+				// extentions
 				if ( !renderer.extensions.get( "OES_texture_float" ) ) {
 					alert( "No OES_texture_float support for float textures." );
+					return;
+				}
+
+				if ( !renderer.extensions.get( "EXT_shader_texture_lod" ) ) {
+					alert( "EXT_shader_texture_lod is not supported" );
 					return;
 				}
 
@@ -488,6 +515,7 @@ void main(void) {
 				stats = new Stats();
 				document.body.appendChild( stats.domElement );
 
+				initTextureCube();
 				onWindowResize();
 
 			}
