--- a/misc_superellipsoid.html
+++ b/misc_superellipsoid.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl - materials - cube reflection [cars]</title>
+		<title>three.js webgl - Superellipsoid</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
 			body {
-				background:#000;
-				color:#fff;
-				padding:0;
-				margin:0;
-				overflow:hidden;
-				font-family:georgia;
-				text-align:center;
+				background-color: black;
+				margin: 0;
+				padding: 0;
 			}
-			a { color:skyblue; text-decoration:none }
+
+			a { color: skyblue }
+
 			#info {
+				color: white;
+				font-size: 13px;
 				position: absolute;
+				bottom: 10px;
 				width: 100%;
+				text-align: center;
+				z-index: 100;
 			}
 		</style>
 	</head>
@@ -31,7 +34,7 @@
 		<script src="js/libs/dat.gui.min.js"></script>
 
 		<div id="info">
-			<a href="http://threejs.org" target="_blank">three.js</a> - webgl environment mapping example<br/>
+			<a href="http://threejs.org" target="_blank">three.js</a> - webgl <a href="https://en.wikipedia.org/wiki/Superellipsoid">Superellipsoid</a> sandbox<br/>
 			Equirectangular Map by <a href="http://gl.ict.usc.edu/Data/HighResProbes/">University of Southern California</a><br/>
 			Spherical Map by <a href="http://www.pauldebevec.com/Probes/">Paul Debevec</a>
 		</div>
