--- a/misc_superellipsoid.html
+++ b/misc_superellipsoid.html
@@ -35,6 +35,7 @@
 
 		<div id="info">
 			<a href="http://threejs.org" target="_blank">three.js</a> - webgl <a href="https://en.wikipedia.org/wiki/Superellipsoid">Superellipsoid</a> sandbox<br/>
+			This example base on <a href="https://threejs.org/examples/#webgl_materials_envmaps">webgl environment mapping example</a><br/>
 			Equirectangular Map by <a href="http://gl.ict.usc.edu/Data/HighResProbes/">University of Southern California</a><br/>
 			Spherical Map by <a href="http://www.pauldebevec.com/Probes/">Paul Debevec</a>
 		</div>
