--- a/pathtracing_test.html
+++ b/pathtracing_test.html
@@ -352,7 +352,7 @@ void intersectScene( inout Intersection intersection, inout Ray ray ) {
 	sphere.material.emission = vec3( 20.0 );
 	sphere.position = vec3( 0.0, 5.0, 0.0 );
 	sphere.radius = 1.0;
-	intersectSphere( intersection, ray, sphere );
+	//intersectSphere( intersection, ray, sphere );
 }
 
 
