--- a/pathtracing_test.html
+++ b/pathtracing_test.html
@@ -82,6 +82,7 @@ const float OFFSET = EPS * 10.0;
 const float PI = 3.14159265359;
 const float PI2 = 6.28318530718;
 const vec3 backgroundColor = vec3( 1.0 );
+const int BOUNCE_LIMIT = 10;
 
 
 // ray
@@ -447,10 +448,13 @@ void main( void ) {
 	// bounce
 	Intersection intersection;
 	vec3 color = vec3( 1.0 );
-	for ( int i = 0; i < 10; i++ ) {
+	for ( int i = 0; i <= BOUNCE_LIMIT; i++ ) {
 		calcRadiance( intersection, ray, i, sa );
 		color *= intersection.material.emission + intersection.material.color;
 		if ( !intersection.hit ) break;
+		if ( i == BOUNCE_LIMIT && intersection.hit ) {
+			color = vec3( 0.0 );
+		}
 	}
 
 	gl_FragColor = vec4( prevColor.rgb + color, 1.0 );
