--- a/pathtracing_test.html
+++ b/pathtracing_test.html
@@ -82,7 +82,13 @@ const float OFFSET = EPS * 10.0;
 const float PI = 3.14159265359;
 const float PI2 = 6.28318530718;
 const vec3 backgroundColor = vec3( 1.0 );
+const vec3 SpecularColor = vec3( 1.0 );
 const int BOUNCE_LIMIT = 10;
+
+// HLSL
+float saturate( float x ) {
+	return clamp( x, 0.0, 1.0 );
+}
 
 
 // ray
@@ -198,6 +204,16 @@ vec3 importanceSampleGGX( vec2 Xi, float Roughness, vec3 N ) {
 	vec3 TangentY = cross( N, TangentX );
 	// Tangent to world space
 	return TangentX * H.x + TangentY * H.y + N * H.z;
+}
+
+// http://d.hatena.ne.jp/hanecci/20130727/p2
+float GGX_G_1( float Roughness, float NoV ) {
+    float k = 0.5 * Roughness * Roughness;
+    return NoV / ( NoV * ( 1.0 - k ) + k );
+}
+
+float GGX_G( float Roughness, float NoV, float NoL ) {
+    return GGX_G_1( Roughness, NoV ) * GGX_G_1( Roughness, NoL );
 }
 
 
@@ -398,8 +414,27 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce, f
 				ray.origin = intersection.position - OFFSET * intersection.normal;
 			}
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX ) {
-			vec3 H = importanceSampleGGX( Xi, 0.3, intersection.normal );
-			ray.direction = reflect( ray.direction, H );
+			float Roughness = 0.5;
+
+			vec3 N = intersection.normal;
+			vec3 V = -ray.direction;
+			vec3 H = importanceSampleGGX( Xi, Roughness, N );
+			vec3 L = reflect( ray.direction, H );
+			//vec3 L = 2.0 * dot( V, H ) * H - V;
+
+			float NoV = saturate( dot( N, V ) );// x x
+			float NoL = saturate( dot( N, L ) );// x x
+			float NoH = saturate( dot( N, H ) );// o o
+			float VoH = saturate( dot( V, H ) );// x x
+
+			if( NoL > 0.0 ) {
+				float G = GGX_G( Roughness, NoV, NoL );
+				float Fc = pow( 1.0 - VoH, 5.0 );
+				vec3 F = (1.0 - Fc) * SpecularColor + Fc;
+				intersection.material.color *= F * G * VoH / ( NoH * NoV );
+			}
+
+			ray.direction = L;
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX_REFRACTION ) {
 			vec3 H = importanceSampleGGX( Xi, 0.3, intersection.normal );
 
